--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -1,5 +1,5 @@
 <% content_for :halo4, true %>
-<% content_for :title, 'Halo 4 - iBotPeaches v5 - Capture The Flag on Valhalla' %>	
+<% content_for :title, "Halo 4 - #{gamertag_validation(@service_record['Gamertag'])} - #{render partial: "halo4/game_history/partials/game/title/#{@partial_type}"}" %>	
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'game_history' %>
 <% content_for :halo4_game_history_active, @css_class %>
@@ -73,38 +73,14 @@
 			<div class="bs-branch-section game-details">
 				<div class="page-header row">
 					<div class="col-md-12">
-						<h1>Capture the Flag on Valhalla</h1>
+						<h1>
+							<%= render partial: "halo4/game_history/partials/game/title/#{@partial_type}" %>
+						</h1>
 					</div>
 				</div>
 
-				<div class="cover" style="background-image: url(https://assets.halowaypoint.com/games/h4/maps/v1/large/ragnarok.png)">
-					<div class="mask">
-						<div class="inner">
-							<div class="title">
-								<h2>Capture the Flag</h2>
-								<p>
-									11/07/2013 | <%= duration_to_friendly(@duration) %>
-								</p>
-							</div>
+				<%= render partial: "halo4/game_history/partials/game/cover/#{@partial_type}" %>
 
-							<div class="game-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/game-base-variants/v1/large/ctf.png)"></div>
-
-							<div class="map">
-								on
-								<br />
-								<span class="focus">Valhalla</span>
-							</div>
-
-							<div class="seperator"></div>
-
-							<div class="victor">
-								<%= link_to 'Gerrit', '#' %>
-								led the game with a personal score of 8, and a K/D of 1.67
-							</div>
-						</div>
-					</div>
-					<div class="victor-player-model hidden-xs" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Swainooooo/h4/spartans/fullbody?target=medium)"></div>
-				</div>
 				<div class="social-shit">
 					<ul>
 						<li>
