--- a/app/views/halo4/game_history/partials/game/cover/_matchmaking.html.erb
+++ b/app/views/halo4/game_history/partials/game/cover/_matchmaking.html.erb
@@ -44,12 +44,14 @@
 						<div class="clearfix"></div>
 					</div>
 				<% else %>
-					<% if (@top_player['IsGuest']) %>
-						<strong><%= gamertag_validation(@top_player['Gamertag']) %></strong>
-					<% else %>
-						<%= link_to(gamertag_validation(@top_player['Gamertag']), halo4_servicerecord_path(gamertag: gamertag_validation(@top_player['Gamertag']))) %>
-					<% end %>
-					led the game with a personal score of <%= @top_player['PersonalScore'] %>, and a K/D of <%= calculate_kd(@top_player['Kills'], @top_player['Deaths']) %>
+					<div class="ffa-victor">
+						<% if (@top_player['IsGuest']) %>
+							<strong><%= gamertag_validation(@top_player['Gamertag']) %></strong>
+						<% else %>
+							<%= link_to(gamertag_validation(@top_player['Gamertag']), halo4_servicerecord_path(gamertag: gamertag_validation(@top_player['Gamertag']))) %>
+						<% end %>
+						led the game with a personal score of <%= @top_player['PersonalScore'] %>, and a K/D of <%= calculate_kd(@top_player['Kills'], @top_player['Deaths']) %>
+						</div>
 				<% end %>
 			</div>
 		</div>
