--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -84,7 +84,7 @@
 				<div class="social-shit">
 					<ul>
 						<li>
-							<a href="<%= generate_twitter_share_url('Capture The Flag on Valhalla') %>" target="_blank" class="btn btn-default" style="color: #4099FF;">
+							<a href="<%= generate_twitter_share_url(get_page_title(@game)) %>" target="_blank" class="btn btn-default" style="color: #4099FF;">
 								<span class="glyphicon glyphicon-retweet" style="padding-right: 8px;"></span>
 								Tweet
 							</a>
