--- a/app/views/user/account/partials/_header.html.erb
+++ b/app/views/user/account/partials/_header.html.erb
@@ -19,13 +19,15 @@
 		</ul>
 		
 		<div class="actions">
-		<% if (!content_for?(:setting_active) && current_user() == storage) %>
-			<%= link_to('Edit Profile', settings_profile_path(), class: 'btn btn-outline-inverse btn-lg') %>
-			
-			<% if current_user.role_id == Role.find_by_identifier(1).id %>
-				<%= link_to('Resend Verification', user_resend_verification_path(), class: 'btn btn-outline-inverse btn-lg') %>
+			<% if (!content_for?(:setting_active) && current_user() == storage) %>
+				<%= link_to('Edit Profile', settings_profile_path(), class: 'btn btn-primary btn-lg') %>
+				
+				<% if current_user.role_id == Role.find_by_identifier(1).id %>
+					<%= link_to('Resend Verification', user_resend_verification_path(), class: 'btn btn-primary btn-lg') %>
+				<% end %>
+			<% elsif (current_user() != storage) %>
+				<%= render partial: 'user/account/partials/follow_buttons', locals: { followee_user: storage, follower_user: current_user()  } %>
 			<% end %>
-		<% end %>
 		</div>
 
 		<div class="h4-player-posed hidden-xs">
