--- a/app/views/user/account/partials/_header.html.erb
+++ b/app/views/user/account/partials/_header.html.erb
@@ -7,31 +7,26 @@
 		%>
 		<h1><%= storage.username %></h1>
 		<p>Member Since <%= "#{storage.created_at.day}/#{storage.created_at.month}/#{storage.created_at.year}" %></p>
-		<ul>
-			<% if storage.role.identifier != 2 %>
-				<li><span class="label" style="background-color: #<%= storage.role.colour %>;"><%= storage.role.name %></span></li>
-			<% end %>
-			<% if (storage.gamertag != nil) %>
-				<% if (storage.gamertag.h4_service_record != nil) %>
-					<li><span class="label label-info">Halo 4</span></li>
-				<% end %>
-			<% end %>
-		</ul>
+		<%= render partial: 'user/account/partials/badges', locals: { storage: storage } %>
 		
 		<div class="actions">
 			<% if (!content_for?(:setting_active) && current_user() == storage) %>
-				<%= link_to('Edit Profile', settings_profile_path(), class: 'btn btn-primary btn-lg') %>
+				<%= link_to('Edit Profile', settings_profile_path(), class: 'btn btn-outline-inverse btn-lg') %>
 				
 				<% if current_user.role_id == Role.find_by_identifier(1).id %>
-					<%= link_to('Resend Verification', user_resend_verification_path(), class: 'btn btn-primary btn-lg') %>
+					<%= link_to('Resend Verification', user_resend_verification_path(), class: 'btn btn-outline-inverse btn-lg') %>
 				<% end %>
 			<% elsif (current_user() != storage) %>
 				<%= render partial: 'user/account/partials/follow_buttons', locals: { followee_user: storage, follower_user: current_user()  } %>
 			<% end %>
 		</div>
 
-		<div class="h4-player-posed hidden-xs">
-			<div class="player" style="background-image: url(https://spartans.svc.halowaypoint.com/players/<%= gamertag_to_html(storage.gamertag.gamertag) %>/h4/spartans/posed?target=large)"></div>
-		</div>
+		<% if (storage.gamertag != nil) %>
+			<% if (storage.gamertag.h4_service_record != nil) %>
+				<div class="h4-player-posed hidden-xs">
+					<div class="player" style="background-image: url(<%= get_player_model_url(gamertag_to_html(storage.gamertag.gamertag), 'large', 'posed') %>)"></div>
+				</div>
+			<% end %>
+		<% end %>
 	</div>
 </div>
