--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,11 @@ body {
 	opacity: 0.6;
 }
 
+.alert-container {
+	margin-top: 40px;
+	margin-bottom: 10px;
+}
+
 /* UL Helpers */
 ul.no-style {
 	list-style-type: none;
