--- a/app/views/about/home/index.html.erb
+++ b/app/views/about/home/index.html.erb
@@ -9,133 +9,136 @@
 
 <div class="container">
 	<div class="row">
-			<div class="col-md-7">
-					<h2>history</h2>
-					<div class="well well-large faq">
-							<h3>FAQ:</h3>
+		<div class="col-md-7">
 
-							<div class="faq-entry">
-								<strong>Why should I come here?</strong><br />	
-								While Halo Waypoint is an incridebly well built website, it's a bit overkill for just looking at stats. Branch offers a much simplier approach that takes away all the clutter and tries to just show you exactly what you want to know about that 1v1 against that kid in matchmaking.
-							</div>
+			<%= render partial: 'partials/flash', locals: { flash: flash } %>
 
-							<div class="faq-entry">
-								<strong>How often can I update my stats?</strong><br />
-								It depends on the stats. Service Records, Commendations, Game Histories, and Specilizations update every 8 minutes. A Match's History never update, as they <strong><sup>should</sup></strong> never change.
-							</div>
+			<h2>history</h2>
+			<div class="well well-large faq">
+				<h3>FAQ:</h3>
 
-							<div class="faq-entry">
-								<strong>Dude, I have like a really cool idea.  </strong><br />
-								Post a Bug Report 
-								<%= link_to('here', 'https://github.com/TheTree/Branch/issues/new?labels=feature%20addition', target: '_blank') %>,
-								and i'll see what can be done. 
-							</div>
+				<div class="faq-entry">
+					<strong>Why should I come here?</strong><br />	
+					While Halo Waypoint is an incridebly well built website, it's a bit overkill for just looking at stats. Branch offers a much simplier approach that takes away all the clutter and tries to just show you exactly what you want to know about that 1v1 against that kid in matchmaking.
+				</div>
 
-							<div class="faq-entry">
-								<strong>Can I have Sauce?</strong><br />
-								<%= link_to('Sure, check this github', 'https://github.com/TheTree/Branch/', target: '_blank') %>
-							</div>
-					</div> 
-					<br />
+				<div class="faq-entry">
+					<strong>How often can I update my stats?</strong><br />
+					It depends on the stats. Service Records, Commendations, Game Histories, and Specilizations update every 8 minutes. A Match's History never update, as they <strong><sup>should</sup></strong> never change.
+				</div>
+
+				<div class="faq-entry">
+					<strong>Dude, I have like a really cool idea.  </strong><br />
+					Post a Bug Report 
+					<%= link_to('here', 'https://github.com/TheTree/Branch/issues/new?labels=feature%20addition', target: '_blank') %>,
+					and i'll see what can be done. 
+				</div>
+
+				<div class="faq-entry">
+					<strong>Can I have Sauce?</strong><br />
+					<%= link_to('Sure, check this github', 'https://github.com/TheTree/Branch/', target: '_blank') %>
+				</div>
+			</div> 
+			<br />
+		</div>
+		<div class="col-md-5">
+			<h2>me</h2>
+			<div class="well well-large">
+				<div class="" style="margin: 10px auto; width: 200px;">
+					<img class="img-polaroid" src="https://0.gravatar.com/avatar/400f92af64c19671fd2f19cfc0e048a5?d=https%3A%2F%2Fidenticons.github.com%2F207b857e5b229287a477f210de4947c5.png&amp;s=200">
+					<div class="twitter" style="width: 110px; margin: 0 auto; margin-top: 20px;">
+						<iframe title="Twitter Follow Button" class="twitter-follow-button twitter-follow-button" id="twitter-widget-0" src="http://platform.twitter.com/widgets/follow_button.1380844203.html#_=1381083245151&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=alexerax&amp;show_count=false&amp;show_screen_name=true&amp;size=m" frameborder="0" scrolling="no" style="width: 139px; height: 20px;" allowtransparency="true" data-twttr-rendered="true"></iframe>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-5">
-					<h2>me</h2>
-					<div class="well well-large">
-							<div class="" style="margin: 10px auto; width: 200px;">
-									<img class="img-polaroid" src="https://0.gravatar.com/avatar/400f92af64c19671fd2f19cfc0e048a5?d=https%3A%2F%2Fidenticons.github.com%2F207b857e5b229287a477f210de4947c5.png&amp;s=200">
-									<div class="twitter" style="width: 110px; margin: 0 auto; margin-top: 20px;">
-										<iframe title="Twitter Follow Button" class="twitter-follow-button twitter-follow-button" id="twitter-widget-0" src="http://platform.twitter.com/widgets/follow_button.1380844203.html#_=1381083245151&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=alexerax&amp;show_count=false&amp;show_screen_name=true&amp;size=m" frameborder="0" scrolling="no" style="width: 139px; height: 20px;" allowtransparency="true" data-twttr-rendered="true"></iframe>
-									</div>
-							</div>
-					</div>
-					<h4>What made Branch?</h4>
-					<div class="well well-large">
-						<strong>
-							<p>JS Frameworks</p>
-						</strong>
+			<h4>What made Branch?</h4>
+			<div class="well well-large">
+				<strong>
+					<p>JS Frameworks</p>
+				</strong>
 
-						<ul class="unstyled">
-								<li>
-									<%= link_to('Bootstrap', 'http://twitter.github.com/bootstrap/', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('jQuery', 'http://jquery.com/', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('Chart.js', 'http://www.chartjs.org/', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('morris.js', 'http://www.oesmith.co.uk/morris.js/', target: '_blank') %>
-								</li>
-						</ul>
+				<ul class="unstyled">
+						<li>
+							<%= link_to('Bootstrap', 'http://twitter.github.com/bootstrap/', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('jQuery', 'http://jquery.com/', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('Chart.js', 'http://www.chartjs.org/', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('morris.js', 'http://www.oesmith.co.uk/morris.js/', target: '_blank') %>
+						</li>
+				</ul>
 
-						<strong>
-							<p>Ruby Gems</p>
-						</strong>
+				<strong>
+					<p>Ruby Gems</p>
+				</strong>
 
-						<ul class="unstyled">
-								<li>
-									<%= link_to('rails', 'http://rubygems.org/gems/rails', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('mysql2', 'http://rubygems.org/gems/mysql2', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('pbkdf2', 'http://rubygems.org/gems/pbkdf2', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('sass-rails', 'http://rubygems.org/gems/sass-rails', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('coffee-rails', 'http://rubygems.org/gems/coffee-rails', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('uglifier', 'http://rubygems.org/gems/uglifier', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('thin', 'http://rubygems.org/gems/thin', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('jquery-rails', 'http://rubygems.org/gems/jquery-rails', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('sass', 'http://rubygems.org/gems/sass', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('redcarpet', 'http://rubygems.org/gems/redcarpet', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('rufus-scheduler', 'http://rubygems.org/gems/rufus-scheduler', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('httparty', 'http://rubygems.org/gems/httparty', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('user-agent', 'http://rubygems.org/gems/user-agent', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('geokit', 'http://rubygems.org/gems/geokit', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('figaro', 'http://rubygems.org/gems/figaro', target: '_blank') %>
-								</li>
-								<li>
-									<%= link_to('aws-sdk', 'http://rubygems.org/gems/aws-sdk', target: '_blank') %>
-								</li>
-						</ul>
-					</div>
-					<h4>The Tree</h4>
-					<div class="well well-large">
-							<ul class="unstyled">
-									<li><a href="http://branchapp.co">Branch</a> <small>(εpsilon)</small></li>
-									<li><a href="http://leafapp.co">Leaf</a></li>
-									<li><a href="http://rootapp.co">Root</a> <small>(tba)</small></li>
-									<li><a href="http://stumpapp.co">Stump</a> <small>(tba)</small></li>
-									<li><a href="http://treeapp.co">Tree</a> <small>(tba)</small></li>
-									<li><a href="http://trunkapp.co">Trunk</a> <small>(tba)</small></li>
-									<li><a href="http://twigapp.co">Twig</a> <small>(Under Construction)</small></li>
-							</ul>
-					</div>
+				<ul class="unstyled">
+						<li>
+							<%= link_to('rails', 'http://rubygems.org/gems/rails', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('mysql2', 'http://rubygems.org/gems/mysql2', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('pbkdf2', 'http://rubygems.org/gems/pbkdf2', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('sass-rails', 'http://rubygems.org/gems/sass-rails', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('coffee-rails', 'http://rubygems.org/gems/coffee-rails', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('uglifier', 'http://rubygems.org/gems/uglifier', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('thin', 'http://rubygems.org/gems/thin', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('jquery-rails', 'http://rubygems.org/gems/jquery-rails', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('sass', 'http://rubygems.org/gems/sass', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('redcarpet', 'http://rubygems.org/gems/redcarpet', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('rufus-scheduler', 'http://rubygems.org/gems/rufus-scheduler', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('httparty', 'http://rubygems.org/gems/httparty', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('user-agent', 'http://rubygems.org/gems/user-agent', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('geokit', 'http://rubygems.org/gems/geokit', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('figaro', 'http://rubygems.org/gems/figaro', target: '_blank') %>
+						</li>
+						<li>
+							<%= link_to('aws-sdk', 'http://rubygems.org/gems/aws-sdk', target: '_blank') %>
+						</li>
+				</ul>
 			</div>
-	</div>    
+			<h4>The Tree</h4>
+			<div class="well well-large">
+					<ul class="unstyled">
+							<li><a href="http://branchapp.co">Branch</a> <small>(εpsilon)</small></li>
+							<li><a href="http://leafapp.co">Leaf</a></li>
+							<li><a href="http://rootapp.co">Root</a> <small>(tba)</small></li>
+							<li><a href="http://stumpapp.co">Stump</a> <small>(tba)</small></li>
+							<li><a href="http://treeapp.co">Tree</a> <small>(tba)</small></li>
+							<li><a href="http://trunkapp.co">Trunk</a> <small>(tba)</small></li>
+							<li><a href="http://twigapp.co">Twig</a> <small>(Under Construction)</small></li>
+					</ul>
+			</div>
+		</div>
+	</div>
 </div>
